--- a/languages/ci/locale/es_ES/LC_MESSAGES/auberge_lang_aj_es.po
+++ b/languages/ci/locale/es_ES/LC_MESSAGES/auberge_lang_aj_es.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Auberges\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-26 09:15+0300\n"
-"PO-Revision-Date: 2013-04-26 20:33+0200\n"
+"PO-Revision-Date: 2013-04-28 22:27+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: \n"
 "Language: es\n"
@@ -1265,11 +1265,10 @@ msgstr ""
 "como recordatorio."
 
 #: ../code/application/views/includes/template-share-email-popup.php:44
-#, fuzzy
 msgid "Mail this PDF quote to someone you know, or send it to yourself."
 msgstr ""
-"Envía por email esta página a alguien que conozcas, o envíatela a ti mismo "
-"como recordatorio."
+"Envíe por email este presupuesto en PDF a alguien que conoce, o envíeselo a "
+"usted mismo."
 
 #: ../code/application/views/includes/template-share-email-popup.php:47
 #: ../code/application/views/helpfile/pofields.php:676
@@ -1303,11 +1302,12 @@ msgid "From (email)"
 msgstr "De (email)"
 
 #: ../code/application/views/includes/template-share-email-popup.php:73
-#, fuzzy
 msgid ""
 "Yes, I want to subscribe to the newsletter to get great deals. (You can "
 "unsubscribe anytime)"
-msgstr "Si, quiero susbribirme a la newsletter."
+msgstr ""
+"Si, Quiero suscribirme al Boletín de Noticias para recibir las mejores "
+"ofertas. (Puede desinscribirse en cualquier momento)"
 
 #: ../code/application/views/includes/template-share-email-popup.php:83
 #: ../code/application/views/helpfile/pofields.php:682
@@ -3161,9 +3161,8 @@ msgstr "Disponibilidad"
 #: ../code/application/views/property_rooms_avail.php:279
 #: ../code/application/views/hw/booking_avail_view.php:283
 #: ../code/application/views/hb/booking_avail_view.php:285
-#, fuzzy
 msgid "Dorm"
-msgstr "Dormitorios"
+msgstr "Dormitorio"
 
 #: ../code/application/views/property_rooms_avail.php:279
 #: ../code/application/views/hw/booking_avail_view.php:283
@@ -4139,9 +4138,8 @@ msgid "Filter by Districts"
 msgstr "Filtro por Distritos"
 
 #: ../code/application/views/city_view.php:20
-#, fuzzy
 msgid "Filter by Landmarks (within 2km)"
-msgstr "Lugares de interés (2kms)"
+msgstr "Filtro por Puntos de Referencia (2 km a la redonda)"
 
 #: ../code/application/views/city_view.php:81
 #: ../code/application/views/helpfile/pofields.php:440
@@ -4256,9 +4254,8 @@ msgid "Close Map"
 msgstr "Cerrar el mapa"
 
 #: ../code/application/views/city_view.php:257
-#, fuzzy
 msgid "Filter by Landmarks"
-msgstr "Filtro por puntos de referencia (-2kms)"
+msgstr "Filtro por Puntos de Referencia"
 
 #: ../code/application/views/city_view.php:261
 msgid "Filter by Districts or Landmarks"
@@ -4540,9 +4537,9 @@ msgstr ""
 #: ../code/application/views/hw/booking_avail_view.php:231
 #: ../code/application/views/hw/booking_avail_view.php:502
 #: ../code/application/views/hb/booking_avail_view.php:289
-#, fuzzy, php-format
+#, php-format
 msgid "Dorm Availability"
-msgstr "Disponibilidad"
+msgstr "Disponibilidad de Dormitorios"
 
 #: ../code/application/views/hw/booking_avail_view.php:231
 #: ../code/application/views/hb/booking_avail_view.php:289
@@ -4707,9 +4704,8 @@ msgstr ""
 
 #: ../code/application/views/hw/booking_avail_view.php:749
 #: ../code/application/views/hb/booking_avail_view.php:719
-#, fuzzy
 msgid "Number of guests selected"
-msgstr "Número total de huéspedes seleccionado"
+msgstr "Número de huéspedes seleccionado"
 
 #: ../code/application/views/hw/booking_avail_view.php:769
 #: ../code/application/views/hb/booking_avail_view.php:737
@@ -5594,8 +5590,8 @@ msgid ""
 "Please select the number of male, female and staff members of your group "
 "before sending your booking request."
 msgstr ""
-"Por favor, seleccione el número de hombres, mujeres y miembros del personal "
-"de su grupo antes de enviar su solicitud de reserva."
+"Por favor indique la cantidad de hombres , de mujeres, y de acompañantes del "
+"grupo antes de enviar su solicitud de reserva."
 
 #: ../code/application/views/group_request.php:15
 #: ../code/application/views/helpfile/pofields.php:144
